customers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-customers-v1-svc
  namespace: core
spec:
  selector:
    app: be-customers-v1
  ports:
  - port: 80
    targetPort: 8080
